--- a/CinemaApp/Info.plist
+++ b/CinemaApp/Info.plist
@@ -31,6 +31,8 @@
 	<dict>
 		<key>UIColorName</key>
 		<string>background</string>
+		<key>UIImageName</key>
+		<string>logo</string>
 	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
