fixed launch screen

--- a/CinemaApp/Info.plist
+++ b/CinemaApp/Info.plist
@@ -32,7 +32,9 @@
 		<key>UIColorName</key>
 		<string>background</string>
 		<key>UIImageName</key>
-		<string>logo</string>
+		<string>launch-logo</string>
+		<key>UIImageRespectsSafeAreaInsets</key>
+		<true/>
 	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
